# ReemaAlomari-protfolio

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: banner.html  bootstrap.html  contactme.html  home.html  myProjects.html  myprojects.html
